Added more HTML content to hoempage, and created 2 new webpages (Cats.html and Dogs.html)

--- a/Project/Index.html
+++ b/Project/Index.html
@@ -11,18 +11,37 @@
   </head>
 
   <body>
+
     <header>
       <h1>Hello and welcome to cats and dogs! The internet's number one website on all things cats and dogs</h1>
       <p>If there's a better place to get cats and dogs information, I don't want to know. <em><strong>(and we"ll sue for impersonation!!)</strong></em></p>
     </header>
-    <div class="cat-homepage">
+
+    <div class="homepage-content">
       <p>Here is a picture of a cat:</p>
-      <img src="https://img.webmd.com/dtmcms/live/webmd/consumer_assets/site_images/article_thumbnails/other/cat_relaxing_on_patio_other/1800x1200_cat_relaxing_on_patio_other.jpg" alt="Picture of a cat" height="750" width="1000">
-      <br>
+      <a href="Animals/Cats.html">
+        Click the picture for more information on cats
+        <br>
+        <img src="https://img.webmd.com/dtmcms/live/webmd/consumer_assets/site_images/article_thumbnails/other/cat_relaxing_on_patio_other/1800x1200_cat_relaxing_on_patio_other.jpg" alt="Picture of a cat" height="750" width="1000">
+      </a><hr>
       <p>And here is a picture of a dog:</p>
-      <img src="https://www.washingtonpost.com/wp-apps/imrs.php?src=https://arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/HB4AT3D3IMI6TMPTWIZ74WAR54.jpg&w=767" alt="Picture of a dog" height="750" width="1000">
+      <a href="Animals/Dogs.html">
+        Click this picture for more information on dogs
+        <br>
+        <img src="https://www.washingtonpost.com/wp-apps/imrs.php?src=https://arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/HB4AT3D3IMI6TMPTWIZ74WAR54.jpg&w=767" alt="Picture of a dog" height="750" width="1000">
+      </a>
       <p>Cute huh!</p>
     </div>
+
+    <footer>
+      <ul>
+        <li><a href="mailto:catanddoglover@gmail.com">Email us</a></li>
+        <li><a href="https://www.petsworld.in/blog/famous-quotes-about-dogs-and-cats.html" target="_blank">Click here for more great cats and dogs quotes</a></li>
+        <li><a href="#">Return to top of page</a></li>    <!--Where no id is specificed, the "#" href value always go to the top of the page-->
+      </ul>
+      <p>&copy; Cats and Dogs 2020</p>
+    </footer>
+
   </body>
 
 </html>
