--- a/Project/Index.html
+++ b/Project/Index.html
@@ -17,21 +17,23 @@
       <p>If there's a better place to get cats and dogs information, I don't want to know. <em><strong>(and we"ll sue for impersonation!!)</strong></em></p>
     </header>
 
-    <div class="homepage-content">
-      <p>Here is a picture of a cat:</p>
-      <a href="Animals/Cats.html">
-        Click the picture for more information on cats
-        <br>
-        <img src="https://img.webmd.com/dtmcms/live/webmd/consumer_assets/site_images/article_thumbnails/other/cat_relaxing_on_patio_other/1800x1200_cat_relaxing_on_patio_other.jpg" alt="Picture of a cat" height="750" width="1000">
-      </a><hr>
-      <p>And here is a picture of a dog:</p>
-      <a href="Animals/Dogs.html">
-        Click this picture for more information on dogs
-        <br>
-        <img src="https://www.washingtonpost.com/wp-apps/imrs.php?src=https://arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/HB4AT3D3IMI6TMPTWIZ74WAR54.jpg&w=767" alt="Picture of a dog" height="750" width="1000">
-      </a>
-      <p>Cute huh!</p>
-    </div>
+    <main>  <!--The content inside the <main> element should be unique to the document. It should not contain any content that is repeated across documents such as sidebars, navigation links, copyright information, site logos, and search forms.-->
+      <div class="homepage-content">
+        <p>Here is a picture of a cat:</p>
+        <a href="Animals/Cats.html">
+          Click the picture for more information on cats
+          <br>
+          <img src="https://img.webmd.com/dtmcms/live/webmd/consumer_assets/site_images/article_thumbnails/other/cat_relaxing_on_patio_other/1800x1200_cat_relaxing_on_patio_other.jpg" alt="Picture of a cat" height="750" width="1000">
+        </a><hr>
+        <p>And here is a picture of a dog:</p>
+        <a href="Animals/Dogs.html">
+          Click this picture for more information on dogs
+          <br>
+          <img src="https://www.washingtonpost.com/wp-apps/imrs.php?src=https://arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/HB4AT3D3IMI6TMPTWIZ74WAR54.jpg&w=767" alt="Picture of a dog" height="750" width="1000">
+        </a>
+        <p>Cute huh!</p>
+      </div>
+    </main>
 
     <footer>
       <ul>
