--- a/Project/Animals/Dogs.html
+++ b/Project/Animals/Dogs.html
@@ -11,21 +11,51 @@
   </head>
 
   <body>
+
     <nav>
       <ul>
         <li><a href="../Index.html">Home</a></li>
         <li><a href="Cats.html">Cats</a></li>
       </ul>
     </nav>
+
     <header>
       <h1>Dogs: You'd be barking mad not to like this page</h1>
       <blockquote cite="https://www.petsworld.in/blog/famous-quotes-about-dogs-and-cats.html">
         “A dog is the only thing on earth that loves you more than he loves himself.”- Josh Billings (a.k.a. Henry Wheeler Shaw; humorist and lecturer)
       </blockquote>
     </header>
-    <p>
-      If you find a lost dog, please contact the <abbr title="Royal Society for the Prevention of Cruelty to Animals">RSPCA</abbr> who will be happy to help.
-    </p>
+
+    <main>
+
+      <p>
+        If you find a lost dog, please contact the <abbr title="Royal Society for the Prevention of Cruelty to Animals"><a href="https://www.rspca.org.uk/">RSPCA</a></abbr> who will be happy to help.
+      </p>
+
+      <section class="audio">
+        <p>For the avoidance of any doubt, this is what a dog sounds like:
+          <audio controls>
+            <source src="../media/dog3.mp3" type="audio/mpeg">
+            <source src="../media/dog3.wav" type="audio/wav">
+              Your browser does not support this audio.
+          </audio>    <!--audio files obtained from "https://www.freesoundeffects.com/"-->
+        </p>
+      </section>
+        
+      <section class="video">
+
+      </section>
+
+      <section class="forms">
+
+      </section>
+
+    </main>
+
   </body>
 
 </html>
+
+
+<!--Forms-->
+<!--Video-->
