Added various form elements to the dog page

--- a/Project/Animals/Cats.html
+++ b/Project/Animals/Cats.html
@@ -137,8 +137,16 @@
         </table>
       </section>
 
+      <section class="forms">
+
+      </section>
+
     </main>
 
   </body>
 
 </html>
+
+
+<!--Other form elements (also make sure to test grouping form elements with the fieldset tag)-->
+<!--Specifically, add these form controls: Button, Datalist, Numeric, Range (use min, max, step), Output, Time/Date/Datetime/Datetime-local/Week/Month, Submit button as image, File, Hidden, Search, Tel (use regex pattern atttribute here)-->
