--- a/Project/Index.html
+++ b/Project/Index.html
@@ -18,7 +18,7 @@
     </header>
 
     <main>  <!--The content inside the <main> element should be unique to the document. It should not contain any content that is repeated across documents such as sidebars, navigation links, copyright information, site logos, and search forms.-->
-      <div class="homepage-content">
+      <div class="homepage-content">    <!--As i've done below, it's good to provide a width/height values for images. This way the area is assigned instantly to the images before they load. Otherwise the page layout will hop around as the images the load and fill the self determined space (probably the same for video resources as well).-->
         <p>Here is a picture of a cat:</p>
         <a href="Animals/Cats.html">
           Click the picture for more information on cats
