--- a/Project/Index.html
+++ b/Project/Index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Obi88">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome!</title>
+    <link rel="stylesheet" type="text/css" href="Design/styles.css">
   </head>
 
   <body>
@@ -41,9 +42,10 @@
         <li><a href="https://www.petsworld.in/blog/famous-quotes-about-dogs-and-cats.html" target="_blank">Click here for more great cats and dogs quotes</a></li>
         <li><a href="#">Return to top of page</a></li>    <!--Where no id is specificed, the "#" href value always go to the top of the page-->
       </ul>
-      <p>&copy; Cats and Dogs 2020</p>
+      <p id="copyright">&copy; Cats and Dogs 2020</p>
     </footer>
 
+    <script type="text/javascript" charset="utf-8" src="Function/app.js"></script>
   </body>
 
 </html>
