--- a/Project/Animals/Dogs.html
+++ b/Project/Animals/Dogs.html
@@ -36,8 +36,8 @@
       <section class="audio">
         <p>For the avoidance of any doubt, this is what a dog sounds like:
           <audio controls>
-            <source src="../media/dog3.mp3" type="audio/mpeg">
-            <source src="../media/dog3.wav" type="audio/wav">
+            <source src="../Media/dog3.mp3" type="audio/mpeg">
+            <source src="../Media/dog3.wav" type="audio/wav">
               Your browser does not support this audio.
           </audio>    <!--audio files obtained from "https://www.freesoundeffects.com/"-->
         </p>
