'media/' case corrected to be 'Media/' as part the actual directory for one more video + cdn images saved into the directory (to avoid content security policy issues).

--- a/Project/Animals/Dogs.html
+++ b/Project/Animals/Dogs.html
@@ -45,7 +45,7 @@
 
       <section class="video-file">
         And this is what a dog looks like:<br>
-        <video src="..\media\Dog With Stick - 37130.mp4" controls autoplay muted>   <!--Within Chrome (and other browsers) the autoplay attribute for video's only works if the muted attribute is on as well (good)!-->
+        <video src="..\Media\Dog With Stick - 37130.mp4" controls autoplay muted>   <!--Within Chrome (and other browsers) the autoplay attribute for video's only works if the muted attribute is on as well (good)!-->
           <!--Can also add in the video using seperate source tags as for the audio tag above (and the audio tag can also be done like this with the audio in the src attribute). I just did it this way for illustration purposes-->
         </video>
       </section><br>
