Spelling error corrected.

--- a/Project/Animals/Cats.html
+++ b/Project/Animals/Cats.html
@@ -180,7 +180,7 @@
             </fieldset><br>
 
             <fieldset class="grid2">
-              <legend>Timimgs</legend>
+              <legend>Timings</legend>
               <p><label>What time do you want to get the cat: <input name= "time" type="time"></label></p>
               <p><label>What week do you want to get the cat: <input type="week"></label></p>
               <p><label>What month will you hold the cats housewarming party: <input type="month"></label></p>
